# min-caml-for-25team4

./: alpha.ml  alphaBeforeK.ml  assoc.ml  assoc.mli  beta.ml  closure.ml  closure.mli  constFold.ml  cse.ml  debug.ml  dune  dune-project  effect.ml  elim.ml  flatTuple.ml  id.ml  inline.ml  kMap.ml  kNormal.ml  kNormal.mli  main.ml  main.mli  min-caml.opam  moveFromMyISA  moveFromToysaRas  moveToMyISA  moveToToysaRas  myLexer.mll  myParser.mly  simm.mli  syntax.ml  type.ml  typing.ml  virtual.mli
.github/: pull_request_template.md
min-rt/: main.ml  min-rt  min-rt.s
myISA/: asm.ml  emit.ml  regAlloc.ml  virtual.ml
result/: 01.md  02.md  04.md  06.md
test/: ack_cps.ml  fib-e.ml  fun.ml  partial.ml  sum-e.ml  test_00.ml  test_01.ml  test_02.ml  test_03.ml  test_04.ml  test_06.ml  test_07.ml  test_08.ml  test_09.ml  test_10.ml  test_11.ml  test_12.ml  toi3.ml  tuple.ml
toysaRas/: asm.ml  asm.mli  emit.ml  libmincaml.S  simm.ml  virtual.ml
x86/: asm.ml  asm.mli  emit.ml  regAlloc.ml  simm.ml  virtual.ml
