(executable
 (name main)
 (package min-caml)
 (public_name mincaml)
 (foreign_stubs (language c) (names float)))

(ocamllex myLexer)
(ocamlyacc myParser)

(copy_files
 (files x86/*)
 (enabled_if (or (= %{profile} x86) (= %{profile} dev) (= %{profile} release)))
 (alias to_x86))

(copy_files
 (files PowerPC/*)
 (enabled_if (= %{profile} ppc))
 (alias to_ppc))

(copy_files
 (files myISA/*)
 (enabled_if (= %{profile} myISA))
 (alias to_myISA))

(env
 (dev
  (flags (:standard -warn-error -a))))
